# Twitch-VOD-Youtube-Archiver

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  start_vod_archiver.bat  start_vod_archiver.ps1
.github/workflows/: ci.yml
src/: .env_example  config.py  main.py  utilities.py  vod_download.py  vod_scrape.py
